--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,9 @@ body {
 }
 
 img {
-    max-width: 50%;
-    height: auto;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 100%;
+    max-height: 100%;
+    float: left;
 }
 
 p {
@@ -16,10 +14,84 @@ p {
     font-weight: bolder;
 }
 
+/*Definições de header de Login*/
+.log_header {
+    border-radius: 10px;
+    background-color: #333c4a;
+    color: #E9FFFF;
+    width:100%;
+    height: 50px;
+}
+
+.log_header h3 {
+    font-size: 15px;
+    float: right;
+    padding-right: 20px;
+}
+
+.log_header h3:hover {
+    color: #4DFED1;
+    transition: 0.5s;
+}
+
+/*Barra de navegação de login header*/
+.logNav {
+    height:100vh;
+    width: 0;
+    position: fixed;
+    top: 0;
+    right: 0;
+    background-color: #333c4a;
+    color:#E9FFFF;
+    overflow-x: hidden;
+    padding-top: 60px;
+    transition: 1s;
+
+    text-align: center;
+    padding-top: 50%;
+}
+
+.logNav a {
+    padding: 8px 8px 8px 60px;
+    text-decoration: none;
+    font-size: 25px;
+    font-weight: bold;
+    color:#E9FFFF;
+    display: block;
+    transition: 1s;
+}
+
+.logNav a:hover {
+    color:#4DFED1;
+}
+
+.logNav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size:35px;
+}
+
+.label {
+    display: inline-block;
+    width: 7em;
+}
+
+#main {
+    transition: margin-left .5s;
+    padding: 20px;
+}
+
+@media screen and (max-height: 450px){
+    .sidenav {padding-top:15px}
+    .sidenav a {font-size: 18px}
+}
+
+
 .title {
     display: block;
     font-size: 60px;
-    align-self: center;
+    text-align: center;
 }
 
 .elements {
@@ -30,4 +102,23 @@ p {
 
 .padElem {
     padding-left: 100%;
+}
+
+.container {
+    margin: auto;
+    width: 80%;
+    border: 3px solid #333c4a;
+    padding: 1px;
+}
+
+.selection_box {
+    background-color: #E9FFFF;
+    text-align: center;
+}
+
+.game_region {
+    margin: auto;
+    width: 80%;
+    border: 3px solid #333c4a;
+    padding: 10px;
 }
