--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,33 @@
 body {
     background-color: #9fa9bf;
     color: #333c4a;
+    font-family: Montserrat;
 }
 
 img {
     max-width: 100%;
     max-height: 100%;
     float: left;
+    font-weight: bolder;
 }
 
-p {
-    font-size: 25px;
-    font-weight: bolder;
+input[type=text], input[type=password] {
+    background-color: #E9FFFF;
+    color: #333c4a;
+    width: 70%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    font-size: 20px;
 }
 
 /*Definições de header de Login*/
 .log_header {
     border-radius: 10px;
     background-color: #333c4a;
-    color: #E9FFFF;
+    color: #4DFED1;
     width:100%;
     height: 50px;
 }
@@ -30,15 +39,17 @@ p {
 }
 
 .log_header h3:hover {
-    color: #4DFED1;
+    color: #E9FFFF;
     transition: 0.5s;
 }
+/************************************/
 
 /*Barra de navegação de login header*/
 .logNav {
-    height:100vh;
+    height:100%;
     width: 0;
     position: fixed;
+    z-index: 1;
     top: 0;
     right: 0;
     background-color: #333c4a;
@@ -47,8 +58,7 @@ p {
     padding-top: 60px;
     transition: 1s;
 
-    text-align: center;
-    padding-top: 50%;
+    text-align: left;
 }
 
 .logNav a {
@@ -70,11 +80,16 @@ p {
     top: 0;
     right: 25px;
     font-size:35px;
+    margin-left: 50%;
 }
 
 .label {
-    display: inline-block;
-    width: 7em;
+    font-size: 25px;
+    color:#4DFED1;
+    display: block;
+    padding: 20px;
+    font-weight: bolder;
+
 }
 
 #main {
@@ -86,39 +101,54 @@ p {
     .sidenav {padding-top:15px}
     .sidenav a {font-size: 18px}
 }
+/************************************/
 
-
-.title {
-    display: block;
-    font-size: 60px;
-    text-align: center;
-}
-
-.elements {
-    display: flex;
-    justify-content: center;
+/*Css for all the mode/diff containers*/
+.mode_container {
+    width: 25%;
+    height: 25%;
+    justify-content: left;
     align-items: center;
+    height: 100vh;
+    padding-top: 25%;
 }
 
-.padElem {
-    padding-left: 100%;
-}
-
-.container {
-    margin: auto;
-    width: 80%;
-    border: 3px solid #333c4a;
-    padding: 1px;
-}
-
-.selection_box {
-    background-color: #E9FFFF;
+.mode_box {
+    background-color: #333c4a;
     text-align: center;
+    color: #4DFED1;
+    border: 1px;
+    border-radius: 15px;
 }
 
-.game_region {
-    margin: auto;
-    width: 80%;
-    border: 3px solid #333c4a;
-    padding: 10px;
+.mode_box h2 {
+    font-size: 20px;
+    padding-top: 20px;
+}
+
+.mode_box hr {
+    width: 75%;
+    color:#9fa9bf;
+}
+
+.mode_box label {
+    font-weight: bolder;
+    font-size: 15px;
+    color: #E9FFFF;
+    padding: 5px;
+}
+
+.modes {
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
+/************************************/
+
+/*LeaderBoards styles*/
+.lb_container {
+    width: 25%;
+    height: 50%;
+    float: left;
+    align-items: center;
+    padding-top: 10%;
 }
