--- a/styles.css
+++ b/styles.css
@@ -1,154 +1,113 @@
 body {
-    background-color: #9fa9bf;
-    color: #333c4a;
+    background-color: rgba(131, 128, 135, 1);
+    color: rgba(233, 255, 255, 1);
     font-family: Montserrat;
 }
 
-img {
-    max-width: 100%;
-    max-height: 100%;
+input[type=number] {
+    width: 25%;
+}
+
+input[type=submit], input[type=number]{
+    background-color: rgba(131, 128, 135, 1);
+    color: rgba(233, 255, 255, 1);
+    border: none;
+    border-radius: 5px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+
+input[type=submit]:hover {
+    color: rgba(77, 254, 209, 1);
+    transition: 0.5s;
+}
+
+h2 {
+    font-size: 25px;
+    color: rgba(77, 254, 209, 1);
+}
+
+.header {
+    background-color: rgba(51, 60, 74, 1);
+    border-radius: 30px;
+    height: 60px;
+    width: auto;
+    position: relative;
+}
+
+.header h1 {
+    font-size: 30px;
     float: left;
-    font-weight: bolder;
+    padding-left: 20px;
+    position: absolute;
+    top: 50%;
+    margin-top: -16px;
 }
 
-input[type=text], input[type=password] {
-    background-color: #E9FFFF;
-    color: #333c4a;
-    width: 70%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-    font-size: 20px;
-}
-
-/*Definições de header de Login*/
-.log_header {
-    border-radius: 10px;
-    background-color: #333c4a;
-    color: #4DFED1;
-    width:100%;
-    height: 50px;
-}
-
-.log_header h3 {
-    font-size: 15px;
+.header h3 {
+    color: rgba(77, 254, 209, 1);
     float: right;
     padding-right: 20px;
 }
 
-.log_header h3:hover {
-    color: #E9FFFF;
+.header h3:hover {
     transition: 0.5s;
-}
-/************************************/
-
-/*Barra de navegação de login header*/
-.logNav {
-    height:100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    right: 0;
-    background-color: #333c4a;
-    color:#E9FFFF;
-    overflow-x: hidden;
-    padding-top: 60px;
-    transition: 1s;
-
-    text-align: left;
+    color: rgba(233, 255, 255, 1);
 }
 
-.logNav a {
-    padding: 8px 8px 8px 60px;
-    text-decoration: none;
-    font-size: 25px;
-    font-weight: bold;
-    color:#E9FFFF;
-    display: block;
-    transition: 1s;
-}
-
-.logNav a:hover {
-    color:#4DFED1;
-}
-
-.logNav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size:35px;
-    margin-left: 50%;
-}
-
-.label {
-    font-size: 25px;
-    color:#4DFED1;
-    display: block;
-    padding: 20px;
-    font-weight: bolder;
-
-}
-
-#main {
-    transition: margin-left .5s;
-    padding: 20px;
-}
-
-@media screen and (max-height: 450px){
-    .sidenav {padding-top:15px}
-    .sidenav a {font-size: 18px}
-}
-/************************************/
-
-/*Css for all the mode/diff containers*/
-.mode_container {
-    width: 25%;
-    height: 25%;
-    justify-content: left;
-    align-items: center;
-    height: 100vh;
-    padding-top: 25%;
-}
-
-.mode_box {
-    background-color: #333c4a;
+.container {
     text-align: center;
-    color: #4DFED1;
-    border: 1px;
-    border-radius: 15px;
+    height: 700px;
+    width: 98%;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 5%;
+    padding-right: 5px;
+    padding-left: 5px;
+    padding-bottom: 30px;
 }
 
-.mode_box h2 {
-    font-size: 20px;
-    padding-top: 20px;
+.container hr {
+    width: 80%;
+    border-top: 5px solid rgba(77, 254, 209, 1);
+    border-radius: 5px;
 }
 
-.mode_box hr {
-    width: 75%;
-    color:#9fa9bf;
+.container h2:hover {
+    transition: 0.5s;
+    color: rgba(233, 255, 255, 1);
 }
 
-.mode_box label {
-    font-weight: bolder;
-    font-size: 15px;
-    color: #E9FFFF;
-    padding: 5px;
+.container div {
+    padding-top: 1%;
 }
 
-.modes {
-    padding-top: 10px;
-    padding-bottom: 20px;
+.settings, .game, .leaderboard {
+    display: inline-block;
+    vertical-align: top;
 }
-/************************************/
 
-/*LeaderBoards styles*/
-.lb_container {
-    width: 25%;
-    height: 50%;
-    float: left;
-    align-items: center;
-    padding-top: 10%;
+.settings, .leaderboard {
+    background-color: rgba(51, 60, 74, 1);
+    border-radius: 20px;
+    height: auto;
+    width: 23%;
 }
+
+.game {
+    border: 5px solid rgba(51, 60, 74, 1);;
+    border-radius: 20px;
+    height: auto;
+    width: 50%;
+}
+
+.small_size {
+    font-size: 16px;
+    font-weight: bold;
+    color: rgba(229, 202, 202, 1);
+}
+
+/* Not working idk why
+.result_table {
+    background-color: rgba(51, 60, 74, 0.6);
+}*/
