--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,15 @@ body {
     background-color: rgba(131, 128, 135, 1);
     color: rgba(233, 255, 255, 1);
     font-family: Montserrat;
+    overflow: auto;
 }
 
 input[type=number] {
-    width: 25%;
+    width: 40px;
 }
 
-input[type=submit], input[type=number]{
+input[type=submit], input[type=number], 
+button[type=submit], button[type=button] {
     background-color: rgba(131, 128, 135, 1);
     color: rgba(233, 255, 255, 1);
     border: none;
@@ -17,14 +19,51 @@ input[type=submit], input[type=number]{
     padding-bottom: 3px;
 }
 
-input[type=submit]:hover {
+input[type=submit]:hover, button[type=submit]:hover{
     color: rgba(77, 254, 209, 1);
     transition: 0.5s;
+}
+
+input[type=text], input[type=password]{
+    background-color: rgba(51, 60, 74, 1);
+    color: rgba(233, 255, 255, 1);
+    border: 2px solid rgba(77, 254, 209, 1);
+    border-radius: 5px;
+    width: 80%;
+    padding: 10px 10px;
+    margin: 12px 0;
+    box-sizing: border-box;
+}
+
+h1 {
+    padding-left: 2%;
 }
 
 h2 {
     font-size: 25px;
     color: rgba(77, 254, 209, 1);
+}
+
+p {
+    text-align: justify;
+    padding-left: 3%;
+}
+
+ul{
+    text-align: left;
+}
+
+.white_hr {
+    width: 50%;
+    align-self: center;
+    border-top: 5px solid rgba(233, 255, 255, 1);;
+    border-radius: 5px;
+}
+
+.highlight {
+    color:rgba(77, 254, 209, 1);
+    font-weight: bold;
+    font-style: italic;
 }
 
 .header {
@@ -53,6 +92,7 @@ h2 {
 .header h3:hover {
     transition: 0.5s;
     color: rgba(233, 255, 255, 1);
+    cursor: pointer;
 }
 
 .container {
@@ -61,7 +101,7 @@ h2 {
     width: 98%;
     display: flex;
     justify-content: space-between;
-    padding-top: 5%;
+    padding-top: 2%;
     padding-right: 5px;
     padding-left: 5px;
     padding-bottom: 30px;
@@ -76,6 +116,7 @@ h2 {
 .container h2:hover {
     transition: 0.5s;
     color: rgba(233, 255, 255, 1);
+    cursor: pointer;
 }
 
 .container div {
@@ -91,20 +132,88 @@ h2 {
     background-color: rgba(51, 60, 74, 1);
     border-radius: 20px;
     height: auto;
-    width: 23%;
+    width: 20%;
 }
 
 .game {
-    border: 5px solid rgba(51, 60, 74, 1);;
+    border: 5px solid rgba(51, 60, 74, 1);
     border-radius: 20px;
     height: auto;
-    width: 50%;
+    width: 55%;
 }
 
 .small_size {
     font-size: 16px;
     font-weight: bold;
     color: rgba(229, 202, 202, 1);
+}
+
+.logNav, .ruleNav {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(131, 128, 135, 1);
+    background-color: rgba(131, 128, 135, 0.5);
+    padding: 20% 0 0 0;
+}
+
+.log_container, .rule_container{
+    background-color: rgba(51, 60, 74, 1);
+    margin: 5% auto 15% auto;
+    border: none;
+    border-radius: 10px;
+    width: 80%;
+    height: auto;
+    padding: 2% 2% 2% 0;
+}
+
+.closex {
+    float: right;
+    color: rgba(77, 254, 209, 1);
+    font-weight: bold;
+    font-size: 30px;
+    cursor: pointer;
+}
+
+.closex:hover {
+    transition: 0.5s;
+    color: rgba(233, 255, 255, 1);
+}
+
+.cancelbtn {
+    margin: 10px 0;
+    width: auto;
+    height: auto;
+    padding: 80% 10px; 
+}
+
+.about_title, .rule_title {
+    font-size: 30px;
+    text-align: left;
+    color:rgba(77, 254, 209, 1);
+}
+
+.logs {
+    background-color: rgba(51, 60, 74, 1);
+    border-radius: 15px;
+    width: 100%;
+    height: 150px;
+}
+
+.logs h4 {
+    font-size: 20px;
+    color: rgba(77, 254, 209, 1);
+    padding: 2% 2% 0 2%;
+}
+
+.logs_box {
+    background-color:rgba(131, 128, 135, 0.5);
+    overflow: auto;
 }
 
 /* Not working idk why
