--- a/styles.css
+++ b/styles.css
@@ -229,7 +229,7 @@ ul{
     background-color: rgba(51, 60, 74, 1);
     border-radius: 15px;
     width: 100%;
-    height: 150px;
+    height: 200px;
 }
 
 .logs h4 {
@@ -242,7 +242,7 @@ ul{
     background-color:rgba(131, 128, 135, 0.3);
     width: 80%;
     height: 50px;
-    border: 2px solid black;
+    border: 2px solid rgba(77, 254, 209, 1);;
     border-radius: 5px;
     overflow: auto;
     margin-left: auto;
@@ -267,7 +267,7 @@ ul{
 
 .result_box {
     background-color: rgba(131, 128, 135, 0.3);
-    border: 2px solid black;
+    border: 2px solid rgba(77, 254, 209, 1);
     border-radius: 5px;
     height: 500px;
     margin: 10%;
