--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ button[type=submit], button[type=button] {
     padding-bottom: 3px;
 }
 
-input[type=submit]:hover, button:hover {
+input[type=submit]:hover, button[type=submit]:hover{
     color: rgba(77, 254, 209, 1);
     transition: 0.5s;
 }
@@ -29,7 +29,7 @@ input[type=text], input[type=password]{
     color: rgba(233, 255, 255, 1);
     border: 2px solid rgba(77, 254, 209, 1);
     border-radius: 5px;
-    width: 40%;
+    width: 80%;
     padding: 10px 10px;
     margin: 12px 0;
     box-sizing: border-box;
@@ -134,11 +134,8 @@ ul{
 }
   
 .game_piece{
-    width:85px; /* Not working idk why
-    .result_table {
-        background-color: rgba(51, 60, 74, 0.6);
-    }*/
-    height:85px;
+    width:45px; 
+    height:35px;
     border-radius: 50px; 
     margin:5px;
     background-color: rgba(51, 60, 74, 1);
@@ -185,18 +182,13 @@ ul{
 }
 
 .log_container, .rule_container{
-    text-align: center;
     background-color: rgba(51, 60, 74, 1);
     margin: 5% auto 15% auto;
     border: none;
     border-radius: 10px;
-    width: 60%;
-    height: 50%;
-    padding: 1% 2% 1% 2%;
-}
-
-.log_auth {
-    margin: 20px;
+    width: 80%;
+    height: auto;
+    padding: 2% 2% 2% 0;
 }
 
 .closex {
@@ -229,7 +221,7 @@ ul{
     background-color: rgba(51, 60, 74, 1);
     border-radius: 15px;
     width: 100%;
-    height: 200px;
+    height: 150px;
 }
 
 .logs h4 {
@@ -238,39 +230,12 @@ ul{
     padding: 2% 2% 0 2%;
 }
 
-.log_box {
-    background-color:rgba(131, 128, 135, 0.3);
-    width: 80%;
-    height: 50px;
-    border: 2px solid rgba(77, 254, 209, 1);;
-    border-radius: 5px;
+.logs_box {
+    background-color:rgba(131, 128, 135, 0.5);
     overflow: auto;
-    margin-left: auto;
-    margin-right: auto;
 }
 
-.game_btn button {
-    display: inline-block;
-    justify-content: space-between;
-    margin-left: 10px;
-    background-color: rgba(51, 60, 74, 1);
-    color: rgba(233, 255, 255, 1);
-    height: 30px;
-    border: none;
-    border-radius: 5px;
-}
-
-.game button:hover {
-    color:rgba(77, 254, 209, 1);
-    transition: 0.5s;
-}
-
-.result_box {
-    background-color: rgba(131, 128, 135, 0.3);
-    border: 2px solid rgba(77, 254, 209, 1);
-    border-radius: 5px;
-    height: 500px;
-    margin: 10%;
-    overflow: auto;
-    white-space: nowrap;
-}
+/* Not working idk why
+.result_table {
+    background-color: rgba(51, 60, 74, 0.6);
+}*/
