--- a/proj/styles.css
+++ b/proj/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgba(131, 128, 135, 1); 
+    background-color: rgba(131, 128, 135, 1);
     color: rgba(233, 255, 255, 1);
     font-family: Montserrat;
     overflow: auto;
@@ -124,7 +124,7 @@ ul{
     padding-top: 1%;
 }
   
-.game_column {
+.inner_game_piece {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -134,8 +134,7 @@ ul{
     flex-wrap: wrap;
 }
   
-.column_piece{
-    clear: both;
+.game_piece{
     width:45px; 
     height:35px;
     border-radius: 50px; 
@@ -146,6 +145,7 @@ ul{
 
 .settings, .game, .leaderboard {
     display: inline-block;
+    vertical-align: top;
 }
 
 .settings, .leaderboard {
@@ -161,6 +161,10 @@ ul{
     height: auto;
     width: 55%;
     text-align: center;
+}
+
+.board {
+    display: inline-block;
 }
 
 .game_btn {
